--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,10 @@
   "private": true,
   "version": "1.0",
   "dependencies": {
-    
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
+    "webcomponentsjs": "Polymer/webcomponentsjs#^0.5.0",
     "web-component-tester": "Polymer/web-component-tester#^1.0.0"
   }
 }
