--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0",
   "dependencies": {
-    "underscore": "~1.8.3"
+    "es6-promise-polyfill": "~1.1.1"
   },
   "devDependencies": {
     "webcomponentsjs": "Polymer/webcomponentsjs#^0.5.0",
